--- a/sistemaGestaoDiscente/pom.xml
+++ b/sistemaGestaoDiscente/pom.xml
@@ -37,4 +37,11 @@
             </plugin>
         </plugins>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10</version>
+        </dependency>
+    </dependencies>
 </project>
